[package]
name = "spin-sync"
version = "0.1.2"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

description = """
Synchronization primitives using spinlock.
The interface resembles std::sync.
"""

readme = "README.md"
keywords = ["spin", "lock", "sync", "mutex", "rwlock"]
documentation = "https://wbcchsyn.github.io/spin-sync-rs/index.html"

license = "MIT"

repository = "https://github.com/wbcchsyn/spin-sync-rs.git"

[badges]
circle-ci = { repository = "wbcchsyn/spin-sync-rs" }
travis-ci = { repository = "wbcchsyn/spin-sync-rs" }

[dependencies]
